--- a/src/styles/global/_root.scss
+++ b/src/styles/global/_root.scss
@@ -1,226 +1,3 @@
-
-// $blue_color: #1e5ba8;
-// $white_color: #ffffff;
-// $black_color: #000000;
-// $nobel_color: #949494;
-// $silver_color: #9b9b9b;
-// $charcoal_color: #4a4a4a;
-// $grey_color: rgba(198, 198, 198, 0.3);
-// $blue_color: #4578b3;
-// $nobel_color: #979797;
-
-// @mixin gradient() {
-//   background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
-// }
-// @mixin gradientreverse() {
-//   background-image: radial-gradient(circle at 0 100%, #029bd7, #1f58a6);
-// }
-// @mixin body_grey() {
-//   background-color: rgba(198, 198, 198, 0.3);
-// }
-// @mixin float() {
-//   float: left;
-//   width: 100%;
-// }
-
-
-// .left_menu_second {
-//     background-color: $white_color;
-//     width: 20%;
-//     float: left;
-//     .navbar-nav {
-//       border-bottom: 2px solid rgba(198, 198, 198, 0.3);
-//       width: 100%;
-//       li {
-//         width: 100%;
-//         a {
-//           background: transparent;
-//           font-family: "Helvetica";
-//           color: $charcoal_color;
-//           font-size: 14px;
-//           padding: 13px 18px;
-//           &:hover {
-//             background-image: radial-gradient(circle at 0 100%, #029bd7, #1f58a6);
-//             color: $white_color;
-//           }
-//           &.active {
-//             @include gradient();
-//             color: $white_color;
-//           }
-//           span {
-//             padding-left: 30px;
-//             padding-top: 2px;
-//             display: inline-block;
-//           }
-//         }
-//       }
-//     }
-//     .left-filters {
-//       display: inline-block;
-//       width: 100%;
-//       padding-right: 10px;
-//       .filter-btn-wrapper {
-//         border-top: 2px solid rgba(198, 198, 198, 0.3);
-//         @include float();
-//         .black_button {
-//           width: 100%;
-//           background: rgba(198, 198, 198, 0.3);
-//         }
-//       }
-//       .filter-wrapper {
-//         position: relative;
-//         float: left;
-//         width: 100%;
-//         padding: 15px 20px;
-//         border-bottom: 2px solid rgba(198, 198, 198, 0.3);
-//         .filter-title {
-//           margin-bottom: 27px;
-//           margin-bottom: 10px;
-//         }
-//         input {
-//           float: right;
-//           @media (max-width: 991px) {
-//             width: 100%;
-//           }
-//         }
-//         input[type="text"] {
-//           height: 40px;
-//           border: 1px solid $silver_color;
-//           margin-bottom: 25px;
-//           padding: 10px;
-//           width: 100%;
-//           margin: 0;
-//           &:focus {
-//             outline: none;
-//             border: 1px solid $charcoal_color;
-//           }
-//         }
-//         select {
-//           height: 40px;
-//           width: 100%;
-//           border: 1px solid $silver_color;
-//           -webkit-appearance: none;
-//           -moz-appearance: none;
-//           -ms-appearance: none;
-//           appearance: none;
-//           background-image: url(../images/up-down.svg);
-//           background-size: 10px;
-//           background-repeat: no-repeat;
-//           background-position: top 14px right 10px;
-//           padding: 10px;
-//         }
-//         .no-margin {
-//           margin: 0px !important;
-//         }
-//       }
-//     }
-//   }
-  
-//   .no-padding {
-//     padding: 0px !important;
-//   }
-//   .no-padding-left {
-//     padding-left: 0px;
-//   }
-//   .no-padding-right {
-//     padding-right: 0px;
-//   }
-
-//   .menu_home {
-//     &:before {
-//       background-image: url(../images/home.svg);
-//       height: 20px;
-//       content: "";
-//       position: absolute;
-//       background-size: contain;
-//       background-position: top center;
-//       left: 0;
-//       width: 100%;
-//       background-repeat: no-repeat;
-//       transition: all ease 0.5s;
-//       top: 10px;
-//     }
-//   }
-
-//   .middle-section {
-//     width: 50%;
-//     float: left;
-//     &.res767.wid70 {
-//       @media (max-width: 767px) {
-//         width: 70%;
-//       }
-//     }
-//     .cms-middle-section {
-//       &.backWhite {
-//         background-color: white;
-//       }
-//       .panel-wrapper {
-//         float: left;
-//         height: 360px;
-//         @media (max-width: 991px) {
-//           // height: 350px;
-//         }
-//         &.wid100 {
-//           height: 100%;
-//           min-height: 360px;
-//           @media (max-width: 991px) {
-//             min-height: 350px;
-//           }
-//         }
-//         .col-sm-6 {
-//           height: inherit;
-//           img {
-//             height: inherit;
-//           }
-//         }
-//         .content-wrapper {
-//           background-color: white;
-//           height: auto;
-//           .title {
-//             font-family: "Helvetica-Bold";
-//             font-size: 20px;
-//             padding-bottom: 20px;
-//             padding-top: 20px;
-//           }
-//           a {
-//             color: #4a4a4a;
-//             &.no-underline {
-//               text-decoration: none;
-//             }
-//           }
-//           .sub-title {
-//             font-family: "Helvetica-Bold";
-//             font-size: 16px;
-//             padding-top: 7px;
-//             padding-bottom: 15px;
-//           }
-//           ul.policy-points {
-//             li {
-//               padding-bottom: 17px;
-//               .question {
-//                 font-family: "Helvetica-Bold";
-//               }
-//             }
-//           }
-//           .panel-group {
-//             .collapse {
-//               // padding: 10px 0;
-//               &.in {
-//                 // padding: 10px 0;
-//               }
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-//   .middle-section.width-80 {
-//     width: 80%;
-//     @media (max-width: 767px) {
-//       width: 100%;
-//     }
-//   }
-  
 header{
   margin-bottom: 75px;
 }
@@ -302,4 +79,26 @@ footer {
 }
 .react-autosuggest__suggestion--highlighted {
   background-color: #ddd;
+}
+
+.p1[data-count]:after{
+  position: absolute;
+  right: 1%;
+  top: 2px;
+  content: attr(data-count);
+  font-size: 10px;
+  /* padding: .2em; */
+  border-radius: 50%;
+  line-height: 15px;
+  color: white;
+  background: rgba(255, 0, 0, 0.85);
+  text-align: center;
+  min-width: 15px;
+  min-height: 15px;
+}
+.fa-stack{
+  font-size: inherit !important;
+  height: 20px !important;
+  line-height: 40px !important;
+  vertical-align: top !important;
 }
