implemented  Storybook functionality

--- a/src/styles/global/_root.scss
+++ b/src/styles/global/_root.scss
@@ -102,3 +102,19 @@ footer {
   line-height: 40px !important;
   vertical-align: top !important;
 }
+
+
+.product-preview-pic img{
+  height: 500px;
+  width: 500px;
+}
+.product-details{
+  padding: 15px 0px;
+}
+
+a{
+  color: inherit !important;
+}
+a:hover{
+  text-decoration: none !important;
+}
