--- a/src/styles/global/_root.scss
+++ b/src/styles/global/_root.scss
@@ -1,28 +1,33 @@
-header{
+body {
+  background-color: #f2f2f2 !important;
+}
+
+header {
   margin-bottom: 75px;
 }
 footer {
-  background-color: #343a40!important;
+  background-color: #343a40 !important;
   color: #fff;
   min-height: 50px;
   padding: 10px 15px;
   margin-top: 10px;
 }
-.main-container, .main-container #sticky-sidebar{
+.main-container,
+.main-container #sticky-sidebar {
   min-height: 834px;
 }
 .bd-sidebar {
-  border-right: 1px solid rgba(0,0,0,.1);
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
   height: calc(100vh - 2rem);
 }
-.productImgThumbnail{
+.productImgThumbnail {
   height: 200px;
   width: 200px;
 }
-#productListSort{
+#productListSort {
   text-align: right;
 }
-#productListSort select{
+#productListSort select {
   width: auto;
   display: inline-block;
   margin-left: 10px;
@@ -81,7 +86,7 @@ footer {
   background-color: #ddd;
 }
 
-.min[data-count]:after{
+.min[data-count]:after {
   position: absolute;
   left: 1%;
   top: 2px;
@@ -97,7 +102,7 @@ footer {
   min-height: 15px;
 }
 
-.max[data-count]:after{
+.max[data-count]:after {
   position: absolute;
   left: 2%;
   top: 2px;
@@ -113,46 +118,93 @@ footer {
   min-height: 30px;
 }
 
-.fa-stack{
+.fa-stack {
   font-size: inherit !important;
   height: 20px !important;
   line-height: 40px !important;
   vertical-align: top !important;
 }
 
-
-.product-preview-pic img{
+.product-preview-pic img {
   height: 500px;
   width: 500px;
 }
-.product-details{
+.product-details {
   padding: 15px 0px;
 }
 
-a{
+a {
   color: inherit !important;
 }
-a:hover{
+a:hover {
   text-decoration: none !important;
 }
 
-.bd-content .card{
+.bd-content .card {
   text-align: center;
-  height: 350px;
-  border: 0px !important;
+  min-height: 350px;
+  margin-bottom: 20px;
+  -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.5);
+  padding-top: 45px;
 }
+
 .bd-content .card h5 {
   width: 200px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  
+
   padding: 20px;
   font-size: 1.3rem;
   margin: 0;
   background: white;
   resize: horizontal;
 }
-.bd-sidebar button{
+
+.bd-content .card img.img-thumbnail {
+  min-height: 195px;
+  max-height: 195px;
+}
+
+.bd-sidebar button {
   width: 50px;
+}
+
+.priceTag {
+  font-weight: 600;
+  right: -2px;
+  top: 10px;
+  margin-left: 50px;
+  position: absolute;
+  display: inline-block;
+  width: 120px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 16px;
+  margin-left: 15px;
+  background: #ffdc40;
+  border-radius: (0 3px 2px 0px);
+  &:after {
+    content: "";
+    position: absolute;
+    right: 100%;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    display: inline-block;
+    line-height: 0;
+    border-width: 20px;
+    border-style: solid;
+    border-color: #ffdc40 #ffdc40 #ffdc40 transparent;
+  }
+  &:before {
+    content: "";
+    position: absolute;
+    bottom: 6px;
+    width: 120px;
+    left: -35px;
+    height: 4px;
+  }
 }
